<resources>
    <string name="app_name">Mtandao</string>
    <string name="join_your_friends">Join your Friends</string>
    <string name="welcome">Welcome</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password</string>
    <string name="login">Login</string>
    <string name="create_an_account">Create an account</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="search">Search</string>
    <string name="add_post">Add post</string>
    <string name="logout">Logout</string>
    <string name="title">Title</string>
    <string name="enter_post_description">Enter post description</string>
    <string name="post">Post</string>
</resources>